plugins {
    id 'java-library'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

group = 'ac.cwnu'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    // SyncTune SDK
    api project(':sdk')
    
    // 테스트 의존성
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

// JavaFX 설정
javafx {
    version = '21.0.1'
    modules = ['javafx.controls', 'javafx.fxml']
}

// Application 설정
application {
    mainClass = 'ac.cwnu.synctune.ui.UIModule'
    // JavaFX 실행을 위한 JVM 인수 추가
    applicationDefaultJvmArgs = [
        '--add-opens', 'javafx.graphics/com.sun.javafx.application=ALL-UNNAMED'
    ]
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

test {
    useJUnitPlatform()
}